<resources>
    <string name="app_name">Outfyt</string>
    <string name="title_home">Home</string>
    <string name="title_form">Form</string>
    <string name="title_dashboard">Schedule</string>
    <string name="title_notifications">News</string>
    <string name="title_result">Result</string>
    <string name="Account">Account</string>
    <string name="title_account">Account</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_news">News</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="web_client_id">512770486417-j3u8j2g1pe85u1nf1cutadieaf902gsl.apps.googleusercontent.com</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="welcome_page">Welcome to Outfyt, let\'s start your journey with us to make your outfit awesome!</string>
    <string name="login_with_google">Login with Google</string>
    <string name="hello">Hello!</string>
    <string name="logo">Logo</string>
    <string name="background">Background</string>
    <string name="upload_image">Upload Image</string>
    <string name="upload">Upload</string>
    <string name="foto">Photo</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="synopsis">Synopsis</string>
    <string name="news">News</string>
    <string name="noNews">No News Available</string>
    <string name="take_picture">Camera</string>
    <string name="choose_image">Gallery</string>
    <string name="welcome_guest">Welcome, Guest!</string>
    <string name="welcome_user">Welcome, %1$s!</string>
    <string name="camera_permission_required">Camera permission is required to use the camera</string>
    <string name="failed_to_start_camera">Failed to start camera</string>
    <string name="no_news">No News</string>
    <string name="cannot_open_link">Cannot open the link</string>
    <string name="login_first">Please login first</string>
    <string name="insert_image_first">Please insert an image first</string>
    <string name="invalid_image">Invalid image</string>
    <string name="failed_to_capture_image">Failed to capture image</string>
    <string name="upload_successful">Upload successful</string>
    <string name="invalid_image_file">Invalid image file</string>
    <string name="empty_or_invalid_image_file">Empty or invalid image file</string>
    <string name="upload_failed">Upload failed: %1$s</string>
    <string name="upload_error">Error: %1$s</string>
    <string name="failed_to_fetch_news_data">Failed to fetch news data</string>
    <string name="error_fetching_news_data">Error fetching news data: %1$s</string>
    <string name="no_events_found">No events found</string>
    <string name="fab">Floating button</string>
    <string name="sample_message">Sample message</string>
    <string name="_12_00_pm">12:00 PM</string>
    <string name="type_a_message">Type a message</string>
    <string name="send">Send</string>
    <string name="analisis_warna">Start Your Color Analysis!</string>
    <string name="gender">Gender ♀️♂️</string>
    <string name="age">Age 📅</string>
    <string name="isi_semua_data">All data must be filled!</string>
    <string name="token_refreshed_successfully">Token successfully created</string>
    <string name="token_refresh_failed">Token creation failed</string>
    <string name="lihat_baju_mu">See Your Clothes</string>
    <string name="tipe_warna">Color Type</string>
    <string name="winter">Winter</string>
    <string name="gender_category">Gender Category</string>
    <string name="male">Male</string>
    <string name="rekomen">Color Recommendations</string>
    <string name="hex">HEX</string>
    <string name="warna">Color</string>
    <string name="not_available">Not Available</string>
    <string name="invalid_color">Invalid Color</string>
    <string name="hasil_analisa">Your Color Analysis Result!</string>
    <string name="back_to_home">Back to Home</string>
    <string name="google_calendar">https://www.googleapis.com/auth/calendar</string>
    <string name="failed_to_fetch_calendar_data">Failed to fetch calendar data</string>
    <string name="Geminichat">Gemini Chat</string>
    <string name="welcome_message">Welcome to Outfyt, let\'s check your style</string>
    <string name="iv_home">outfyt</string>
    <string name="example_account">silid@gmail.com\t</string>
    <string name="read_more">Read More</string>
    <string name="RecomendationResult">Recomendation Result</string>
    <string name="example_image">Example Image</string>
    <string name="item_image">Item Image</string>
    <string name="no_recommendations_found">No recommendations found</string>
    <string name="link_product">https://amazon product example</string>
    <string name="like">Like</string>
    <string name="save">Save</string>
    <string name="visit_link_product">See Product</string>
    <string name="title_favorite">Favorite</string>
    <string name="no_saved_recommendations_found">You don\'t have any saved recommendations</string>
    <string name="daily_reminder_channel_id">daily_reminder_channel</string>
    <string name="daily_reminder_channel_name">Daily Reminder</string>
    <string name="notification_title">Outfyt Reminder</string>
    <string name="notification_text">Don\'t forget to check your Outfyt recommendation today</string>
</resources>