<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_login">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.outfyt.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_formFragment"
            app:destination="@id/navigation_form"
            app:popUpTo="@id/navigation_form"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_form"
        android:name="com.example.outfyt.ui.form.FormFragment"
        android:label="@string/title_form"
        tools:layout="@layout/fragment_form">
        <action
            android:id="@+id/action_formFragment_to_resultsFragment"
            app:destination="@id/navigation_result"
            app:popUpTo="@id/navigation_result"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.outfyt.ui.schedule.ScheduleFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.outfyt.ui.news.NewsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.outfyt.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" >
        <action
            android:id="@+id/action_accountFragment_to_loginFragment"
            app:destination="@id/navigation_login"
            app:popUpTo="@id/navigation_login"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.outfyt.ui.auth.LoginFragment"
        android:label="LoginFragment"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_login"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_result"
        android:name="com.example.outfyt.ui.result.ResultFragment"
        android:label="@string/title_result"
        tools:layout="@layout/fragment_result" >
        <action
            android:id="@+id/action_resultsFragment_to_homeFragment"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true" />
    </fragment>

</navigation>