<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/ivNewsImage"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/foto"
            android:src="@drawable/ic_logo"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvNewsTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/ivNewsImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvNewsAuthor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:textSize="14sp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/tvNewsTitle"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tvNewsSynopsis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/synopsis"
            android:textSize="14sp"
            android:textColor="#444"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/tvNewsAuthor"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
